# 3bodysimulator

./: Application.cpp  Application.h  CMakeLists.txt  build_emscripten.sh  main.cpp
Assets/Shaders/: triangle_frag.glsl  triangle_vertex.glsl
Core/: Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Timestep.h
Platform/Desktop/: DesktopInput.cpp  DesktopInput.h  DesktopWindow.cpp  DesktopWindow.h
Renderer/: Camera.cpp  Camera.h  PrimitiveRenderer.cpp  PrimitiveRenderer.h  Shader.cpp  Shader.h  Window.h
Simulator/: PhysicsBody.cpp  PhysicsBody.h  SimulationLayer.cpp  SimulationLayer.h
